// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClosedMemoryCard 1`] = `
<div
  className="memory-game--memory-slot"
>
  <button
    className="memory-game--memory-card memory-game--memory-card__closed"
  >
    <CardContent>
      <MockChildren />
    </CardContent>
  </button>
</div>
`;

exports[`FoundMemoryCard 1`] = `
<div
  className="memory-game--memory-slot"
>
  <button
    className="memory-game--memory-card memory-game--memory-card__found"
  >
    <CardContent>
      <MockChildren />
    </CardContent>
  </button>
</div>
`;

exports[`OpenMemoryCard 1`] = `
<div
  className="memory-game--memory-slot"
>
  <button
    className="memory-game--memory-card memory-game--memory-card__open"
  >
    <CardContent>
      <MockChildren />
    </CardContent>
  </button>
</div>
`;
